--- a/1.0/css/vendor.css
+++ b/1.0/css/vendor.css
@@ -48,7 +48,7 @@ pre[class*="language-"] {
 }
 
 :not(pre)>code[class*="language-"], pre[class*="language-"] {
-    background: #4d4f42;
+    background: #272822;
 }
 
 /* Inline code */
